# mindflow

./: .env.example  .gitignore  .goosehints  AGENTS.md  DOCUMENTATION_SUMMARY.md  Dockerfile  INDEX.md  PHASE_1_COMPLETION_STATUS.md  PHASE_1_LEARNING_AND_DEPLOYMENT.md  PHASE_1_SUMMARY.md  README.md  TECH_STACK_LEARNING.md  TECH_STACK_QUICK_REF.txt  docker-compose.yml  pyproject.toml  requirements.txt  test_vector_store.py  view_tech_stack.sh
artifacts/: artifact_csv_func.py  csv_reader.py
data/: graph.json
data/vectors/: chroma.sqlite3
docs/: ARCHITECTURE.md  ARCHITECTURE_DISCUSSION.md  CHANGELOG.md  CLAUDE_COWORK_ANALYSIS.md  COMPETITOR_ANALYSIS.md  COWORK_INTEGRATION_ANALYSIS.md  CROSS_PLATFORM.md  DATABASE.md  DATA_MIGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_ENVIRONMENT.md  DEVELOPMENT_PLAN.md  DIFFERENTIATION_STRATEGY.md  DOCUMENTATION_STRATEGY.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENGLISH_CONVERSION.md  LEARNING.md  LLM_CONFIG.md  PROGRESS.md  README.md  REORGANIZATION_PLAN.md  SKILL_FORMAT.md  TECHNICAL_DESIGN.md  UPDATE_SUMMARY.md  VECTOR_STORE_OPTIMIZATION.md
docs/archive/: DEVELOPMENT.md  FAILURE_LEARNING.md  LEARNING.md  README.md  advise_by_deepseek.md
docs/plans/: README.md  phase1-knowledge-base.md  phase2-io-layer.md  phase2.5-context.md  phase3-evolution.md  phase4-ui.md  (+1 more)
planning/: QUICK_START.md  README.md  VERSIONS.md  VERSION_TEMPLATE.md
prompts/: competitor_analysis_prompt.md
src/: __init__.py  config.py  load_seeds.py
tests/: README.md  test_artifact.py  test_e2e.py  test_kb.py  test_kb_en.py  test_skill_markdown.py
(+39 files in other folders)
